# mkar

./: CMakeLists.txt  LICENSE  resources.rc
include/: bitio.hpp  conf.hpp  darchive.hpp  earchive.hpp  mask.hpp  mpcc_script.hpp  platform.hpp  random_src.hpp
include/ast/base/: node.hpp
include/env/: common.hpp  environment.hpp
include/lexer/: token.hpp
include/object/: executable.hpp  mark.hpp  object.hpp
include/parser/: parser.hpp
include/plugins/: plugin.hpp
include/program/: program.hpp
include/vm/: gct.hpp  vm.hpp
src/: common.cpp  darchive.cpp  earchive.cpp  main.cpp  platform.cpp
src/ast/: ast.cpp
src/env/: environment.cpp
src/lexer/: token.cpp
src/object/: object.cpp
src/parser/: parser.cpp
src/plugins/: base.cpp  mkar.cpp  plugin.cpp
src/program/: program.cpp
src/vm/: gct.cpp  vm.cpp
